# libomegaup

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: index.html  omegaup.html  search.js  search.json
docs/omegaup/: api.html  validator.html
docs/omegaup/validator/: parsing.html  validatortest.html
omegaup/: __init__.py  api.py
omegaup/validator/: parsing.py  validatortest.py
requirements/: test.txt
tests/: parsing_test.py  validatortest_test.py
